refactor: split logic of `identity.controller` into separate files
